# python-learning-orchestrated

./: .gitignore  .pre-commit-config.yaml  .replit  AGENTS.md  Makefile  README.md  launch.bat  launch.ps1  launch.sh  patch.diff  pyproject.toml  replit.md
.Jules/: palette.md
.github/workflows/: ci.yml
.jules/: bolt.md  sentinel.md
docs/: adk-roadmap.md  architecture.md  execution-checklist-sync-backup.md  next-step-features.md
src/python_learning_orchestrated/: __init__.py  __main__.py  cli.py
src/python_learning_orchestrated/adapters/: checkpoint_store.py  in_memory_practice_repository.py  in_memory_progress_repository.py  json_file_practice_repository.py  json_file_progress_repository.py  json_file_progress_snapshot_store.py  stdio_session_io.py
src/python_learning_orchestrated/adk/: __init__.py  actions.py  app.py  roadmap.py  workflow.py
src/python_learning_orchestrated/application/: __init__.py  interactive_ui.py  interactive_ui.py.orig  lesson_runner.py  practice_session.py  progress_service.py  progress_transfer.py
tests/: test_checkpoint_store.py  test_cli_smoke.py  test_in_memory_progress_repository.py  test_interactive_ui.py  test_json_file_practice_repository.py  test_json_file_progress_repository.py  test_json_file_progress_snapshot_store.py  test_learning_path.py  test_lesson_runner.py  test_practice_domain.py  test_practice_progress_domain.py  test_practice_session.py  test_progress_service.py  test_progress_transfer.py  test_security_dos.py  test_smoke.py
tests/adk/: test_actions.py  test_cli_adk.py
(+9 files in other folders)
